crates/crucible-cli/src/tui/oil/tests/chat_app_snapshot_tests/snapshots/crucible_cli__tui__oil__tests__chat_app_snapshot_tests__overlay_snapshots__snapshot_raw_drawer_with_history.snap
---
source: crates/crucible-cli/src/tui/oil/tests/chat_app_snapshot_tests/overlay_snapshots.rs
expression: render_app_raw(&mut app)
---
[?25l[m[H[J                                                                                
[38;2;40;44;52m▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
[38;2;192;202;245;48;2;40;44;52m [TIME]: [38;2;0;206;209;49;1;7m INFO [38;2;192;202;245;48;2;40;44;52;22;27m Session saved[39m                                                 
[38;2;192;202;245m [TIME]: [38;2;0;206;209;49;1;7m INFO [38;2;192;202;245;48;2;40;44;52;22;27m Thinking display: on[39m                                          
[38;2;192;202;245m [TIME]: [38;2;0;206;209;49;1;7m INFO [38;2;192;202;245;48;2;40;44;52;22;27m Indexing files[39m                                                
[38;2;192;202;245m [TIME]: [38;2;224;175;104;49;1;7m WARN [38;2;192;202;245;48;2;40;44;52;22;27m Context at 85%[39m                                                
[38;2;40;44;52;49m▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
[30;106;1m MESSAGES [m [96mESC/q[m [38;2;100;110;130mclose[m
