crates/crucible-cli/src/tui/oil/tests/chat_app_snapshot_tests/snapshots/crucible_cli__tui__oil__tests__chat_app_snapshot_tests__overlay_snapshots__snapshot_raw_perm_bash.snap
---
source: crates/crucible-cli/src/tui/oil/tests/chat_app_snapshot_tests/overlay_snapshots.rs
expression: render_app_raw(&mut app)
---
[?25l[m[H[J                                                                                
[38;2;40;44;52m▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
[38;2;255;255;255;48;2;40;44;52m  npm install lodash                                                            
[39m                                                                                
[96;1m  > [y] Yes                                                                     
[38;2;192;202;245;22m    [n][38;2;255;255;255m No[39m                                                                      
[38;2;192;202;245m    [a][38;2;255;255;255m Allowlist[39m                                                               
[38;2;40;44;52;49m▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
[38;2;247;118;142;1;7m PERMISSION [27m BASH [22m  y/n/a[38;2;100;110;130m options[38;2;247;118;142m  ↑↓[38;2;100;110;130m move[38;2;247;118;142m  Tab[38;2;100;110;130m entry[38;2;247;118;142m  Esc[38;2;100;110;130m cancel[m
