crates/crucible-cli/src/tui/oil/tests/chat_app_snapshot_tests/snapshots/crucible_cli__tui__oil__tests__chat_app_snapshot_tests__overlay_snapshots__snapshot_raw_statusline_warning_counts.snap
---
source: crates/crucible-cli/src/tui/oil/tests/chat_app_snapshot_tests/overlay_snapshots.rs
expression: output
---
[48;5;10m[38;5;0m[1m NORMAL [0m[38;5;8m [0m[38;5;14mgpt-4o[0m                                              [38;2;224;175;104m[1m[7m WARN [0m[38;2;224;175;104m[1m 3 [0m[38;2;247;118;142m[1m[7m ERROR [0m[38;2;247;118;142m[1m 1 [0m
